fdo#73046 DOCX For anchor tag relativeHeight attribute should be always present.

Change-Id: Ib54651878b6343e2ab8bb11a13c11289dd0f72f6
Reviewed-on: https://gerrit.libreoffice.org/7208
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>